--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 21 23:46:29 CDT 2016
-sdk.dir=C\:\\Users\\mew\\.AndroidStudio1.5\\config\\SDKs
+#Fri Mar 25 03:39:25 CDT 2016
+sdk.dir=/Users/Tan/AndroidStudioProjects
