--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 17 14:26:08 CDT 2016
-sdk.dir=C\:\\Users\\mew\\.AndroidStudio1.5\\config\\SDKs
+#Sun Apr 17 21:14:35 CDT 2016
+sdk.dir=/Users/Tan/AndroidStudioProjects
