--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Apr 17 21:14:35 CDT 2016
-sdk.dir=/Users/Tan/AndroidStudioProjects
+#Sun May 01 17:54:40 CDT 2016
+sdk.dir=C\:\\Users\\Malachi\\AppData\\Local\\Android\\sdk
